@@ -1,50 +1,0 @@
-<!--
-    Translation of CVS $Revision$
-    
-    Translators must leave this comment in tact, but remove any dollar
-    signs ($) from the CVS Revision indicator.
-
-    When revising a translation, copy the CVS Revision number from the
-    original source file.  !-->
-
-<h1>Donate to LilyPond development</h1> 
-
-<p>
-
-<p>
-Three good reasons to sponsor LilyPond development: 
-<ul>
-<li>More sponsors means more time for LilyPond.
-<p>
-Without sponsors, we have to pursue other jobs to feed ourselves and
-our families, and will have less time to improve LilyPond.
-
-<li>With your support, we can support you.
-
-<p>
-Extra attention for your platform, your needs, your
-platform, your wishes, your feature-requests and your bug-reports.
-
-<li>Everyone benefits.
-
-<p>
-Every improvement made for you will be passed on to the rest of the
-user community, so helping us helps others.
-
-</ul>
-
-LilyPond is free/open-source software. Using, copying and changing it
-is and will remain free. If you want LilyPond to stay healthy and
-active, then sponsor us.
-
-<p>
-
-We suggest a donation of EUR 40.  Donations can be sent to via
-
-<blockquote>
-<a
-href="http://www.paypal.com">PayPal</a> to
-hanwen@xs4all.nl
-</blockquote>
-
-Don't forget to tell us any special wishes you have.
