@@ -1,3 +1,7 @@
+2006-01-25  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* site/about/doneet.html (Module): remove. 
+
 2006-01-25  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* TRANSLATION: Remove slackware, donate.
